# fluffy-octo-system

./: CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  entrypoint.sh  init-db.sh  models.py  notes.txt  requirements.txt  run.py  setup.py
app/: cli.py  config.py  init.py  models.py
app/auth/: forms.py  routes.py
app/auth/templates/auth/: login.html  register.html
app/books/: forms.py  init.py  routes.py
app/books/templates/books/: index.html
app/main/: routes.py
app/static/css/: style.css
app/templates/: base.html  index.html
app/templates/errors/: 403.html
docs/: conf.py  index.rst
service/api/: app.py  requirements.txt
service/api/tests/: test_app.py
src/: main.rs
tests/: conftest.py  test_auth.py  test_books.py
